# arcadia

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  gaps.md
Desktop/: .Cargo.lock.swp  Cargo.toml
Desktop/src/: cli.rs  main.rs
Desktop/src/cli/: args.rs  completion.rs  config_cmds.rs  mod.rs  module_cmds.rs
Desktop/src/gui/: app.rs  assets.rs  mod.rs  theme.rs
Desktop/src/gui/app/: entry.rs  lifecycle.rs  mod.rs  navigation.rs
Desktop/src/gui/app/lan_nodes/: mod.rs  panel.rs
Desktop/src/gui/app/late/: bonsai.rs  chat_pane.rs  mod.rs  panel.rs  sidebar.rs  state_bridge.rs  top_bar.rs  visualizer.rs  vote_panel.rs
Desktop/src/gui/app/modules_page/: mod.rs  panel.rs  requirements_modal.rs  row.rs
Desktop/src/gui/app/network_overview/: panel.rs
Desktop/src/gui/app/root/: mod.rs  render.rs  top_bar.rs
Desktop/src/gui/app/shell/: execute.rs  keys.rs  mirror.rs  mod.rs  panel.rs  tui_screen.rs
Desktop/src/gui/app/sidebar/: layout.rs  mod.rs  nav_items.rs
Desktop/src/gui/app/splash/: draw_arch.rs  draw_bg.rs  draw_hills.rs  draw_horizon.rs  draw_stars.rs  draw_sun.rs  math.rs  mod.rs  view.rs
Desktop/src/gui/theme/: chrome.rs  icons.rs  mod.rs  splash_colors.rs
Desktop/src/gui/theme/modules/: buttons.rs  mod.rs  panel.rs  row_surface.rs  toggle_states.rs  typography.rs
Desktop/src/gui/theme/nav_accents/: amber.rs  cyan.rs  emerald.rs  fuchsia.rs  indigo.rs  mod.rs  orange.rs  palette.rs  sky.rs  teal.rs  violet.rs
Desktop/src/gui/tui/: ansi_line.rs  cd_builtin.rs  colors.rs  cwd.rs  env.rs  keys.rs  mod.rs  session.rs  vt_history.rs
Documentation/: about.md  build.md  (+7 more)
Shared/ArcadiaCore/: Cargo.toml
Shared/ArcadiaCore/src/: ffi.rs  lib.rs  navigation.rs
Shared/ArcadiaCore/src/config/: commandline.rs  late.rs  mod.rs  modules.rs  thin_client.rs
Shared/ArcadiaCore/src/modules/: lan.rs  late.rs  mod.rs  net.rs  remote_mirror.rs  remote_session.rs  shell.rs  shell_motd.rs  surface.rs
Shared/ArcadiaCore/src/modules/lan/: config.rs  discovery.rs  handlers.rs  mod.rs  peers.rs  protocol.rs
Shared/ArcadiaCore/src/platform/: ios.rs  mod.rs
apps/arcadia/: Cargo.toml
apps/arcadia/src/config/: commandline.rs  mod.rs
apps/arcadia/src/platform/: linux.rs  mod.rs  unknown.rs  windows.rs
(+278 files in other folders)
