[package]
name = "arcadia"
version = "0.1.0"
edition = "2021"
description = "Arcadia launcher base application"
license = "MIT"

[features]
default = ["headless"]
headless = []
gui = ["dep:gpui"]

[dependencies]
arcadia-core = { path = "../Shared/ArcadiaCore" }
gpui         = { version = "0.2.2", optional = true }
rustyline    = "18.0.0"
