[package]
name = "arcadia-core"
version = "0.1.0"
edition = "2021"
description = "Arcadia shared core logic (cross-platform)"
license = "MIT"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
serde  = { version = "1", features = ["derive"] }
serde_json = "1"
toml   = "0.8"
uniffi = "0.28"
ureq   = { version = "2", features = ["json"] }
tungstenite = { version = "0.24", features = ["native-tls"] }
uuid   = { version = "1", features = ["v4"] }
